--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
   		<h2 class="title">Tecnología en Producción de Audio</h2>
  	 	<h3>UNAD</h3>
  	 <div style="margin: 24px 0;">
-    	<a href="https://www.instagram.com/guitarshape/?hl=es-la"><i class="fa fa-instagram"></i></a>
-    	<a href="https://twitter.com/guitardafo"><i class="fa fa-twitter"></i></a>  
-    	<a href="www.linkedin.com/in/david-orjuela-a67743188"><i class="fa fa-linkedin"></i></a>  
-    	<a href="https://www.facebook.com/Guitardafo"><i class="fa fa-facebook"></i></a> 
+    	<a href="https://www.instagram.com/guitarshape/?hl=es-la" target="_blank"><i class="fa fa-instagram"></i></a>
+    	<a href="https://twitter.com/guitardafo" target="_blank"><i class="fa fa-twitter"></i></a>  
+    	<a href="www.linkedin.com/in/david-orjuela-a67743188" target="_blank"><i class="fa fa-linkedin"></i></a>  
+    	<a href="https://www.facebook.com/Guitardafo" target="_blank"><i class="fa fa-facebook"></i></a> 
   	</div>
 	</div>
 </section>
